Bug 369793, DOMMouseScroll events not dispatched when they cause text zoom changes, r=jst, sr=peterv